@@ -1,5 +1,6 @@
 0.3.3+ (in development)
 ------------------------------------------------------------------------
+- Feature: [#14071] “Vandals stopped” statistic for security guards.
 
 0.3.3 (2021-03-13)
 ------------------------------------------------------------------------
